modification menu et ajout header_text

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .logo{
     display: flex;
     margin: 56px 0px 0px 191px
@@ -36,7 +35,7 @@
     display: flex;
 }
 
-.menu__aboutus, .menu__apps, .menu__findadoctor, .menu__testimonials{
+.menu__item{
     font-family: Mulish;
     font-style: normal;
     font-weight: normal;
@@ -48,6 +47,7 @@
     color: #1F1534;
 
     opacity: 0.5; 
+    
 }
 
 .menu__home{
@@ -62,4 +62,53 @@
 
     /* 1f1534-hyfen */
     color: #1F1534;
+}
+
+.header_text{
+    position: absolute;
+    width: 445px;
+    height: 338px;
+    left: 190px;
+    top: 283px;
+}
+
+.header_text__titre{
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 56px;
+    
+    color: #000000;
+}
+
+.header_text__paragraphe{
+margin-top: 25px;
+font-family: Mulish;
+font-style: normal;
+font-weight: 300;
+font-size: 21px;
+line-height: 32px;
+
+color: #7D7987;
+}
+
+.header_text__boutton{
+margin-top: 45px;
+width: 200px;
+height: 60px;
+    
+background: #458FF6;
+border-radius: 55px;
+
+font-family: Mulish;
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+line-height: 60px;
+text-align: center;
+
+color: #FFFFFF;
+
 }
