--- a/css/style.css
+++ b/css/style.css
@@ -110,5 +110,12 @@ line-height: 60px;
 text-align: center;
 
 color: #FFFFFF;
+}
 
+.header_image{ 
+    position: absolute;
+    width: 693px;
+    height: 598px;
+    left: 744px;
+    top: 177px;
 }
