--- a/css/style.css
+++ b/css/style.css
@@ -279,3 +279,28 @@ color: #FFFFFF;
     border-radius: 20px;
     box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
 }
+
+.our_services__boutton{
+   margin-top:69px;
+    position: absolute;
+    width: 200px;
+    height: 60px;
+    left: 690px;
+    top: 1015px;
+
+    border: 1.4px solid #458FF6;
+    box-sizing: border-box;
+    border-radius: 55px;
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 60px;
+
+    color: #458FF6;
+    
+    text-align: center;
+
+
+}
