--- a/css/style_download.css
+++ b/css/style_download.css
@@ -1,45 +1,34 @@
- /* leading healthcare providers */
-.leading{
- 
-  position: absolute;
-  left: 135px;
-  top: 2418px;
-  width: 1273px;
-  
-  display: flex;
-}
+.download{
+    position: absolute;
+    left: 280px;
+    top: 2870px;
+    display: flex;
+    margin-top: 265px;
+  }
 
-.leading__image img{
-  width: 650px;
-  height: 477px;
+.download__text{
+  margin-right: 71px;
+  width: 420px;
+  height: 375px;
 }
-
-.leading__text{
-  margin-left: 137px;
-}
-
-.leading__text_titre{
+.download__text_titre{
   font-family: Mulish;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
-  line-height: 56px;
+  line-height: 48px;
 
   color: #000000;
 }
+.download__text_rectangle{
+  position: absolute;
+  width: 56px;
+  height: 2px;
 
-.leading__text_rectangle{
-  
-position: absolute;
-width: 56px;
-height: 2px;
-
-margin-top: -10px;
-background: #000000;
-border-radius: 10px;
+  background: #000000;
+  border-radius: 10px;
 }
-
-.leading__text_paragraphe{
+.download__text_paragraphe{
   font-family: Mulish;
   font-style: normal;
   font-weight: 300;
@@ -47,10 +36,9 @@ border-radius: 10px;
   line-height: 30px;
 
   color: #7D7987;
-  
-  margin-top: 49px;
+  margin-top: 60px;
 }
-.leading__text_bouton{
+.download__text_bouton{
   border: 1.4px solid #458FF6;
   box-sizing: border-box;
   border-radius: 55px;
@@ -67,4 +55,9 @@ border-radius: 10px;
   color: #458FF6;
     
   text-align: center;
+}
+
+.download__image img{
+  width: 665px;
+  height: 434px;
 }
